--- a/index.html
+++ b/index.html
@@ -1,62 +1,61 @@
 <html ng-app="zenefitsMap">
   <head>
   <title>Zenefits map</title>
-
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <script src="./bower_components/angular/angular.js"></script>
   <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA8iBZcEhmC4z-cVHYYenLxZl7Kl4qlCGQ&libraries=places"></script>
+  <script src="./bower_components/angular/angular.js"></script>
   <script src="./app/build/all.js"></script>
 
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600" rel="stylesheet">
   <script src="./bower_components/ngmap/build/scripts/ng-map.min.js"></script>
   <script src="./bower_components/angular-bootstrap/ui-bootstrap.min.js"></script>
   <script src="./bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
 
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600" rel="stylesheet">  
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <link rel="stylesheet" href="./app/build/main.css">
-
   </head>
-  <body ng-controller="mapController">
-    <div id="right-panel" ng-class="{ expanded : placeList.length > 1 }">
-    <input places-auto-complete on-place-changed="search()"/>
-      <div ng-if="placeList.length > 1">
+
+  <body ng-controller="MapController as vm">
+    <div id="right-panel" ng-class="{ expanded : vm.placeList.length > 1 }">
+    <input ng-disabled="!vm.mapLoaded" places-auto-complete on-place-changed="vm.search()" placeholder="Search..."/>
+      <div ng-if="vm.placeList.length > 1">
         <hr>
-        <!-- <h2>Results</h2> -->
-        <div map-sidebar class="list-group sidebar" id="places">
-            <div ng-repeat="place in placeList">
-              <a href="#" class="map-card list-group-item" ng-click="setActive($event, $index)" ng-class="{active : activeItem === $index}">
+        <div class="list-group sidebar" id="places">
+            <div ng-repeat="place in vm.placeList">
+              <a href="#" class="map-card list-group-item" ng-click="vm.setActive($event, $index)" ng-class="{active : vm.activeItem === $index}">
                 <h5 class="mb-1 font-weight-bold">{{place.name}}</h5>
-                <div ng-if="place.rating" class="label label-default">{{place.rating}}</div>
-                <span uib-rating ng-model="place.rating" read-only="true"> </span> <br>
+                <div ng-if="place.rating"> 
+                  <div class="label label-default">{{place.rating}}</div>
+                  <span uib-rating ng-model="place.rating" read-only="true"> </span> <br>
+                </div>
                 <small ng-if="place.price_level" class="text-muted"> {{'$'.repeat(place.price_level)}}&nbsp;&bull; </small>
-                <small class="text-muted"> {{stripAddress(place.formatted_address)}}</small>
+                <small class="text-muted"> {{place.formatted_address}}</small>
               </a>
             </div>
         </div>
       </div>
       <br>
-      <small ng-if="placeList.length > 1" class="text-muted"> Displaying {{placeList.length}} results </small>
+      <small ng-if="vm.placeList.length > 1" class="text-muted"> Displaying {{vm.placeList.length}} results </small>
     </div>
-    <ng-map center='current-position' geo-fallback-center="[40.74, -98.6]" geo-callback="setUserLocation(e)" zoom="6">
-      <div ng-repeat="marker in markers">
+    <ng-map on-tilesloaded="vm.setMapLoaded()" center='current-position' geo-fallback-center="[40.74, -98.6]" geo-callback="vm.setUserLocation()" zoom="6">
+      <div ng-repeat="marker in vm.markers">
         <marker
           id="marker-{{marker.id}}"
           position="{{marker.lat}}, {{marker.lng}}"
-          on-click="setActive(marker.id)">
+          on-click="vm.setActive(marker.id)">
         </marker>
-        <info-window id="marker-info">
-          <div ng-non-bindable="">
-            <h5>{{selectedMarker.title}}</h5>
-            <div ng-repeat="field in selectedMarker.address">
-               {{field}}
-              <br/>
-            </div>
-          </div>
-        </info-window>
       </div>
+      <info-window id="marker-info" on-closeclick="vm.onCloseMarker()">
+        <div ng-non-bindable="">
+          <h5>{{vm.selectedMarker.title}}</h5>
+          <div ng-repeat="field in vm.selectedMarker.address">
+             {{field}}
+            <br/>
+          </div>
+        </div>
+      </info-window>
     </ng-map>
   </body>
-
 
 </html>
