--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <html ng-app="zenefitsMap">
+
   <head>
   <title>Zenefits map</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -23,7 +24,7 @@
         <hr>
         <div class="list-group sidebar" id="places">
             <div ng-repeat="place in vm.placeList">
-              <a href="javascript:void(0)" class="map-card list-group-item" ng-click="vm.setActive($event, $index)" ng-class="{active : vm.activeItem === $index}">
+              <a href="javascript:void(0)" class="list-group-item" ng-click="vm.setActive($event, $index)" ng-class="{active : vm.activeItem === $index}">
                 <h5 class="mb-1 font-weight-bold header">{{place.name}}</h5>
                 <div ng-if="place.rating">
                   <div class="label-small label-theme-default">{{place.rating}}</div>
