--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
-<html ng-app="zenefitsMap">
+<html ng-app="googlePlaces">
 
   <head>
-  <title>Zenefits map</title>
+  <title>Locations</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA8iBZcEhmC4z-cVHYYenLxZl7Kl4qlCGQ&libraries=places"></script>
